[gd_scene load_steps=2 format=3 uid="uid://t4y468f26a2b"]

[ext_resource type="Script" path="res://screens/pause_menu/pause_menu.gd" id="1_bn2as"]

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_bn2as")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="pause_text" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resume_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="menu_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
